// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Components/Searchable Dropdown Custom Option 1`] = `
<div
  className="css-1ry038z-Container e17dnzmx0"
>
  <label
    className="leafygreen-ui-1k5mcru"
    htmlFor="searchable-dropdown-Custom option select"
  >
    Custom option select
  </label>
  <div
    className="css-gte0m8-Wrapper e17dnzmx4"
  >
    <div
      className="css-1ry038z-Container e1yw4j304"
      id="searchable-dropdown-Custom option select"
    >
      <button
        aria-disabled={false}
        className="static-lg-ui-classname leafygreen-ui-n2d19n css-129de3f-StyledButton-menuButtonStyleOverrides e1yw4j302"
        data-cy="searchable-dropdown"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <div
          className="leafygreen-ui-v038xi"
        />
        <div
          className="leafygreen-ui-1qmzz4y"
        >
          <div
            className="css-19l4y8w-ButtonContent e1yw4j301"
          >
            <div
              className="css-soeq2u-LabelWrapper e1yw4j303"
            >
              <p
                className="css-197mxpc-OverflowBody e1yw4j300 leafygreen-ui-1yli3c0"
                data-cy="dropdown-value"
              >
                Select an element
              </p>
            </div>
          </div>
          <svg
            alt=""
            aria-hidden={true}
            className="leafygreen-ui-1t9qnhm"
            fill="none"
            height={16}
            role="presentation"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Components/Searchable Dropdown Default 1`] = `
<div
  className="css-1ry038z-Container e17dnzmx0"
>
  <label
    className="leafygreen-ui-1k5mcru"
    htmlFor="searchable-dropdown-standard select"
  >
    standard select
  </label>
  <div
    className="css-gte0m8-Wrapper e17dnzmx4"
  >
    <div
      className="css-1ry038z-Container e1yw4j304"
      id="searchable-dropdown-standard select"
    >
      <button
        aria-disabled={false}
        className="static-lg-ui-classname leafygreen-ui-n2d19n css-129de3f-StyledButton-menuButtonStyleOverrides e1yw4j302"
        data-cy="searchable-dropdown"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <div
          className="leafygreen-ui-v038xi"
        />
        <div
          className="leafygreen-ui-1qmzz4y"
        >
          <div
            className="css-19l4y8w-ButtonContent e1yw4j301"
          >
            <div
              className="css-soeq2u-LabelWrapper e1yw4j303"
            >
              <p
                className="css-197mxpc-OverflowBody e1yw4j300 leafygreen-ui-1yli3c0"
                data-cy="dropdown-value"
              >
                Select an element
              </p>
            </div>
          </div>
          <svg
            alt=""
            aria-hidden={true}
            className="leafygreen-ui-1t9qnhm"
            fill="none"
            height={16}
            role="presentation"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Components/Searchable Dropdown Multiselect 1`] = `
<div
  className="css-1ry038z-Container e17dnzmx0"
>
  <label
    className="leafygreen-ui-1k5mcru"
    htmlFor="searchable-dropdown-multi select"
  >
    multi select
  </label>
  <div
    className="css-gte0m8-Wrapper e17dnzmx4"
  >
    <div
      className="css-1ry038z-Container e1yw4j304"
      id="searchable-dropdown-multi select"
    >
      <button
        aria-disabled={false}
        className="static-lg-ui-classname leafygreen-ui-n2d19n css-129de3f-StyledButton-menuButtonStyleOverrides e1yw4j302"
        data-cy="searchable-dropdown"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <div
          className="leafygreen-ui-v038xi"
        />
        <div
          className="leafygreen-ui-1qmzz4y"
        >
          <div
            className="css-19l4y8w-ButtonContent e1yw4j301"
          >
            <div
              className="css-soeq2u-LabelWrapper e1yw4j303"
            >
              <p
                className="css-197mxpc-OverflowBody e1yw4j300 leafygreen-ui-1yli3c0"
                data-cy="dropdown-value"
              >
                Select an element
              </p>
            </div>
          </div>
          <svg
            alt=""
            aria-hidden={true}
            className="leafygreen-ui-1t9qnhm"
            fill="none"
            height={16}
            role="presentation"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M1.636 5.364a1 1 0 000 1.414l4.95 4.95.707.707a1 1 0 001.414 0l.707-.707 4.95-4.95a1 1 0 000-1.414l-.707-.707a1 1 0 00-1.414 0L8 8.899 3.757 4.657a1 1 0 00-1.414 0l-.707.707z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
